[java, rt] select a main method candidate with args
GitOrigin-RevId: 3610747bf559bacd330af8519442417499bbeea0